[build-system]
requires = ["setuptools >= 65.5"]
build-backend = "setuptools.build_meta"

[project]
name = 'pylabscanner'
authors = [
    {name = "Mateusz Surma"},
]
description = "CLI tool for scanning jobs in a laboratory with Thorlabs LTS stages"
dependencies = [
    "click",
    "h5py",
    "matplotlib",
    "numpy",
    "pandas",
    "pyserial",
    "pytest",
    "tables",
    "thorlabs-apt-device",
    "tqdm"
]
readme = "README.md"
requires-python = "3.12"
license = {text = "GPL v3"}
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "flake8",
    "flake8-bugbear",
    "ipykernel",
    "isort",
    "pre-commit",
]

[project.scripts]
labscanner = "pylabscanner:cli"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["test", "examples"]

[tool.setuptools.dynamic]
version = {attr = "pylabscanner.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]